--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ version = "0.1.0"
 [dependencies]
 
 [[bin]]
-name = "hello-world"
-path = "src/hello-world.rs"
+name = "day1"
+path = "src/day1/day1.rs"
 
 [profile.release]
 debug = false
 opt-level = 2
 strip = true
+lto = true
