--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ once_cell = "1.18.0"
 name = "day1"
 path = "src/day1/day1.rs"
 
+[[bin]]
+name = "day2"
+path = "src/day2/day2.rs"
+
 [profile.release]
 debug = false
 opt-level = 2
